adding exponential backoff in all event-based threads + simple vms transaction result class to avoid looping in event handler